--- a/templates/index.html
+++ b/templates/index.html
@@ -76,4 +76,7 @@
         <p>For more information, please visit my <a href="https://github.com/adhiraj-ranjan" target="_blank">GitHub profile</a>.</p>
     </div>
 </body>
+<script>
+    document.getAttribute(".domain").value = "https://" + window.location.host;
+    </script>
 </html>
