--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,6 @@
     </div>
 </body>
 <script>
-    document.getAttribute(".domain").value = "https://" + window.location.host;
+    document.querySelector(".domain").innerHTML = "https://" + window.location.host;
     </script>
 </html>
